<resources>
    <string name="app_name">Test_fix_sensor_version2</string>
    <string name="record">record</string>
    <string name="display">display</string>
    <string name="action_name">action name</string>
    <string name="number_of_actions">numbers of action point</string>
    <string name="back">返回</string>
    <string name="yes">確定</string>
    <string name="delete">刪除</string>
    <string name="X">X：</string>
    <string name="Y">Y：</string>
    <string name="Z">Z：</string>
    <string name="upbound">上界值</string>
    <string name="lowbound">下界值</string>
    <string name="start_test">開始測試</string>
    <string name="end_test">結束測試</string>
    <string name="start_to_record">開始紀錄</string>
    <string name="end_to_record">結束紀錄</string>
    <string name="confirm_the_action">動作確認</string>
    <string name="fix_action">修改動作數據</string>
    <string name="leave">離開</string>
    <string name="no_record">沒有資料！</string>
    <string name="detail_data">詳細資料</string>
    <string name="look_video">觀看影片</string>
    <string name="look_example">觀看動作範例</string>
    <string name="user_pebble">use pebble</string>
    <string name="add_video">匯入影片</string>
    <string name="make_video">錄影</string>
    <string name="start_recording">start recording</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="restart">restart</string>
    <string name="stop">stop</string>
</resources>
